app/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dogbreed-deployment
  labels:
    app: dogbreed-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dogbreed-app
  template:
    metadata:
      labels:
        app: dogbreed-app
    spec:
      containers:
        - name: dogbreed-chart
          image: therealjimoh/dogbreed-fe-get:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
