app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogbreed-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-cluster-issuer-key"
spec:
  tls:
    - secretName: dogbreed-app-tls
      hosts:
        - app-127-0-0-1.nip.io
  rules:
    - host: app-127-0-0-1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dogbreed-service
                port:
                  number: 4000
